--- a/APM/src/app/app.component.html
+++ b/APM/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
   <h1>
-    Acme Product Management
+    TaDa! Welcome to {{title}}!!
   </h1>
-  <pm-products></pm-products>
+  ... Starter Files ...
 </div>
